[package]
name = "listen1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
kuchiki = "0.8.1"
reqwest = { version = "0.11.12", features = [ "json", "cookies" ] }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.5", features = [ "std", "std_rng"] }
futures = "0.3.25"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde_qs = "0.11.0"
chrono = "0.4.23"
md-5 = "0.10.5"
tokio = { version = "1.29.1", features = ["full"] }
async-trait = "0.1.72"
